compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_deprecation_attributes.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 490
expression: "\n@deprecated(\"1\")\n@deprecated(\"2\")\npub fn main() -> Nil {\n  Nil\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @deprecated("2")
  │ ^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.

